--- a/templates/tournoi/show.html.twig
+++ b/templates/tournoi/show.html.twig
@@ -29,7 +29,7 @@
 
 		<div id="regles" class="content">
 			<img class="banner-tr" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}" alt="Bannière du tournoi">
-			<hr>
+			<hr class="line-tr">
 			<p>A PROPOS DE CE TOURNOI</p>
 
 			{{ tournoi.description | raw}}
