--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,9 @@
 			{% block title %}Bienvenue !
 			{% endblock %}
 		</title>
+		<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+		<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+		<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
@@ -20,7 +23,7 @@
 	<body>
 		<header class="mobile-header">
 			<i class="fa-solid fa-bars"></i>
-			<img src="{{ asset('img/logo.png') }}" alt="logo"/>
+			<img class="logo-mobile" src="{{ asset('img/logo.png') }}" alt="logo"/>
 		</header>
 		<div class="overlay"></div>
 		<div id="main-container">
@@ -37,29 +40,21 @@
 			{% endblock %}
 		</body>
 
-<script>
+		<script>
+			// Mobile sidebar
+			const openSidebar = document.querySelector('.fa-bars');
+			const sidebar = document.querySelector('#sidebar');
+			const overlay = document.querySelector('.overlay');
 
-// Mobile sidebar
-const openSidebar = document.querySelector('.fa-bars');
-const closeSidebar = document.querySelector('.fa-xmark');
-const sidebar = document.querySelector('#sidebar');
-const overlay = document.querySelector('.overlay');
+			openSidebar.addEventListener('click', () => {
+			sidebar.classList.add('active');
+			overlay.classList.add('active');
+			});
 
-openSidebar.addEventListener('click', () => {
-	sidebar.classList.add('active');
-	overlay.classList.add('active');
-});
-
-closeSidebar.addEventListener('click', () => {
-	sidebar.classList.remove('active');
-	overlay.classList.remove('active');
-});
-
-overlay.addEventListener('click', () => {
-	sidebar.classList.remove('active');
-	overlay.classList.remove('active');
-});
-
-</script>
+			overlay.addEventListener('click', () => {
+			sidebar.classList.remove('active');
+			overlay.classList.remove('active');
+			});
+		</script>
 
 	</html>
