--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,15 @@
   margin: 0;
 }
 
+body {
+  min-height: 100vh;
+}
+
+html {
+  scroll-behavior: smooth;
+  color: white;
+}
+
 header {
   padding: 20px;
   width: 100%;
@@ -32,9 +41,6 @@ div.overlay.active {
   display: block;
 }
 
-body {
-  min-height: 100vh;
-}
 
 #main-container {
   display: table;
@@ -350,8 +356,8 @@ body {
 
 .follow-trd {
   display: flex;
-  align-items: center;
-  gap: 10px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .head-flw {
