--- a/templates/tournoi/show.html.twig
+++ b/templates/tournoi/show.html.twig
@@ -85,4 +85,13 @@
 			</div>
 		</div>
 	{% endif %}
+
+	<div>
+		<h4>Enregistrement Ouvert</h4>
+		<p>40 / {{ tournoi.nbJoueursMax }} <em>Joueurs enregistré</em></p>
+		<span id="rejoindre-tr">REJOINDRE</span>
+		<a href="{{ path('app_tournoi_join', {'id' : tournoi.id }) }}">
+			<button class="btnRejoindreTr">Rejoindre</button>
+		</a>
+	</div>
 {% endblock %}
