--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@
   text-decoration: none;
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
 body {
@@ -85,17 +86,15 @@ div.overlay.active {
   gap: 20px;
 }
 
-
-
 #content {
-  display: table-cell;
-  width: 85%;
-  vertical-align: top;
+  /* display: table-cell; */
+  /* width: 100%; */
+  /* vertical-align: top; */
   /* padding: 20px; */
 }
 
-#jeu-select {
-  width: 250px;
+/* #jeu-select {
+  width: fit-content;
   height: 60px;
   border-radius: none;
   border-left: none;
@@ -105,6 +104,7 @@ div.overlay.active {
   border-right: 1px solid rgba(255, 255, 255, 0.134);
   border-top: none;
   border-bottom: none;
+  padding: 10px;
 }
 
 #jeu-select option {
@@ -114,7 +114,54 @@ div.overlay.active {
   outline: none;
   box-shadow: none;
   border-radius: none;
+  padding: 20px;
+} */
+
+/* ---------- Jeu selectionner ---------- */
+
+details>summary::-webkit-details-marker,
+details>summary::-moz-list-bullet {
+  display: none !important;
 }
+
+#jeu-dropdown {
+  width: 200px;
+}
+
+#jeu-dropdown[open] summary~.jeux-liste {
+  border: 1px solid #ccc;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.jeux-liste {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.jeux-liste li {
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.jeux-liste li:hover {
+  background-color: #e0e0e0;
+}
+
+.jeux-liste li img {
+  width: 30px;
+  /* Ajustez la taille selon vos besoins */
+  margin-right: 10px;
+}
+
+.jeux-liste li.selected {
+  font-weight: bold;
+}
+
+/* ----------------------------------- */
 
 .box-equipe img {
   width: clamp(50px, 100%, 100px);
@@ -123,8 +170,8 @@ div.overlay.active {
 .filter {
   background-color: #2c3147;
   border: 1px solid rgba(255, 255, 255, 0.134);
+  width: 100%;
 }
-
 
 .banner-theme {
   background-image: url("../img/bg-test-hl.png");
@@ -134,13 +181,12 @@ div.overlay.active {
   color: white;
   text-align: center;
   padding: 100px 50px;
-  width: auto;
-  height: 300px;
+  height: 250px;
 }
 
 .banner-theme-txt {
   width: 25%;
-  position: absolute;
+  /* position: absolute; */
   text-align: left;
   top: 20px;
 }
@@ -285,12 +331,12 @@ div.overlay.active {
 
 
 .tournois-list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin-top: 20px;
   width: fit-content;
   align-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .tr-region p {
