--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,60 +1,65 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="UTF-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="description" content="Site pour organiser, participer à vos tournois favoris"/>
-		<title>
-			{% block title %}Bienvenue !
-			{% endblock %}
-		</title>
-		<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-		<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-		<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
-		{% block stylesheets %}
-			<link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="Site pour organiser, participer à vos tournois favoris" />
+	<title>
+		{% block title %}Bienvenue !
 		{% endblock %}
-		{# <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> #}
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-	</head>
+	</title>
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+	<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('css/style.css') }}" />
+	{% endblock %}
+	{#
+	<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> #}
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-	<body>
-		<header class="mobile-header">
-			<i class="fa-solid fa-bars"></i>
-			<img class="logo-mobile" src="{{ asset('img/logo.png') }}" alt="logo"/>
-		</header>
-		<div class="overlay"></div>
-		<div id="main-container">
-			{% block sidebar %}
-				{{ include ('include/sidebar.html.twig') }}
-			{% endblock %}
+<body>
+	<header class="mobile-header">
+		<i class="fa-solid fa-bars"></i>
+		<img class="logo-mobile" src="{{ asset('img/logo.png') }}" alt="logo" />
+	</header>
+	<div class="overlay"></div>
+	<div id="main-container">
+		{% block sidebar %}
+		{{ include ('include/sidebar.html.twig') }}
+		{% endblock %}
 
-			<div id="content"> {% block body %}{% endblock %}
-				</div>
-			</div>
-			{% block javascripts %}
-				{# {{ encore_entry_script_tags('app') }} #}
-				<script src="{{ asset('js/script.js') }}"></script>
-			{% endblock %}
-		</body>
+		<div id="content"> {% block body %}{% endblock %}
+		</div>
+	</div>
+	{% block javascripts %}
+	{# {{ encore_entry_script_tags('app') }} #}
+	<script src="{{ asset('js/script.js') }}"></script>
+	{% endblock %}
+</body>
 
-		<script>
-			// Mobile sidebar
-			const openSidebar = document.querySelector('.fa-bars');
-			const sidebar = document.querySelector('#sidebar');
-			const overlay = document.querySelector('.overlay');
+<script>
+	const openSidebar = document.querySelector('.fa-bars');
+	const sidebar = document.querySelector('#sidebar');
+	const overlay = document.querySelector('.overlay');
 
-			openSidebar.addEventListener('click', () => {
-			sidebar.classList.add('active');
-			overlay.classList.add('active');
-			});
+	openSidebar.addEventListener('click', () => {
+		sidebar.classList.add('active');
+		overlay.classList.add('active');
+	});
 
-			overlay.addEventListener('click', () => {
-			sidebar.classList.remove('active');
-			overlay.classList.remove('active');
-			});
-		</script>
+	overlay.addEventListener('click', () => {
+		sidebar.classList.remove('active');
+		overlay.classList.remove('active');
+	});
 
-	</html>
+
+</script>
+
+</html>
