--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,87 +1,99 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	TournoisEsport
+TournoisEsport
 {% endblock %}
 
 {% block stylesheets %}
-	{{ parent() }}
-	<link rel="stylesheet" href="{{ asset('css/pagination.css') }}">
+{{ parent() }}
+<link rel="stylesheet" href="{{ asset('css/pagination.css') }}">
 {% endblock %}
 
 
 {% block body %}
-	<div class="banner-theme">
-		<div class="banner-theme-txt">
-			<h1>
-				CREER, CONCOURIR, CONQUERIR
-			</h1>
-			<p>
-				VictoryForge : Votre destination e-sport pour des tournois intenses, des équipes de compétition et des défis passionnants. Rejoignez la compétition, montez sur le podium de la victoire.
-			</p>
-		</div>
+<div class="banner-theme">
+	<div class="banner-theme-txt">
+		<h1>
+			CREER, CONCOURIR, CONQUERIR
+		</h1>
+		<p>
+			VictoryForge : Votre destination e-sport pour des tournois intenses, des équipes de compétition et des défis
+			passionnants. Rejoignez la compétition, montez sur le podium de la victoire.
+		</p>
 	</div>
-	<div class="filter">
-		<select id="jeu-select">
-			<option value="">Sélectionnez un jeu</option>
-			{% for jeu in jeux %}
-				<option value="{{ jeu.id }}" {% if jeu.id == jeuSelectionne %} selected {% endif %}>{{ jeu.nomJeu }}</option>
-			{% endfor %}
-		</select>
-	</div>
-	<div class="flash-message">
-		{% for message in app.flashes('success') %}
-			<div class="success">{{ message }}</div>
+</div>
+<div class="filter">
+	{# <select id="jeu-select">
+		<option value="">Sélectionnez un jeu</option>
+		{% for jeu in jeux %}
+		<option src="{{ vich_uploader_asset(jeu, 'logoFile') }}" value="{{ jeu.id }}" {% if jeu.id==jeuSelectionne %}
+			selected {% endif %}>{{ jeu.nomJeu }}</option>
 		{% endfor %}
-	</div>
-	<div
-		class="tr-main-wrapper">
-		{# <h3 id="find-tr-h3">Trouver des tournois</h3> #}
-		<div class="tr-content">
-			<div class="tournois-list">
-				{% for tournoi in tournois %}
-					<a href="{{ path('app_tournoi_show', {'id' : tournoi.id }) }}">
-						<div class="tournament-item">
-							<div class="tr-container">
-								<div class="tr-banner">
-									<img class="tournoi-img" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}" alt="Bannière tournoi"/>
-									<p>{{ tournoi.nomTournoi }}</p>
-								</div>
-								<div class="tournament-time">
-									<p class="tr-calendar">
-										<span class="material-symbols-outlined">calendar_month</span>
-										{{ tournoi.dateDebut | format_datetime(locale='fr', pattern="EE dd MMM") }}
-									</p>
-									<p class="tr-schedule">
-										<span class="material-symbols-outlined">schedule</span>
-										{{ tournoi.dateDebut | format_datetime('none', 'short', locale='fr') }}
-									</p>
-								</div>
-								<div class="tr-item-line"></div>
-								<div class="tr-region">
-									{% if tournoi.region is not null %}
-										<p>{{tournoi.region}}</p>
-									{% else %}
-										<p>Monde</p>
-									{% endif %}
-								</div>
-								<div class="tr-item-line"></div>
-								<div class="organisateur-info">
-									<img class="logo-organisateur" src="{{ vich_uploader_asset(tournoi, 'logoFile') }}" alt="Logo organisateur">
-									<p>{{ tournoi.nomOrganisation }}</p>
-								</div>
-							</div>
+	</select> #}
+	<details id="jeux-dropdown">
+		<summary>Sélectionnez un jeu
+			<i class="fa-solid fa-chevron-down"></i>
+		</summary>
+		<ul class="jeux-liste">
+			{% for jeu in jeux %}
+			<li data-value="{{ jeu.id }}" {% if jeu.id==jeuSelectionne %} class="selected" {% endif %}>
+				<img class="logo-jeu" src="{{ vich_uploader_asset(jeu, 'logoFile') }}" alt="{{ jeu.nomJeu }}">
+				<span class="nomJeu">{{ jeu.nomJeu }}</span>
+			</li>
+			{% endfor %}
+		</ul>
+	</details> 
+</div>
+<div class="tr-main-wrapper">
+	{# <h3 id="find-tr-h3">Trouver des tournois</h3> #}
+	<div class="tr-content">
+		<div class="tournois-list">
+			{% for tournoi in tournois %}
+			<a href="{{ path('app_tournoi_show', {'id' : tournoi.id }) }}">
+				<div class="tournament-item">
+					<div class="tr-container">
+						<div class="tr-banner">
+							<img class="tournoi-img" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}"
+								alt="Bannière tournoi" />
+							<p>{{ tournoi.nomTournoi }}</p>
 						</div>
-					</a>
-				{% endfor %}
-			</div>
+						<div class="tournament-time">
+							<p class="tr-calendar">
+								<span class="material-symbols-outlined">calendar_month</span>
+								{{ tournoi.dateDebut | format_datetime(locale='fr', pattern="EE dd MMM") }}
+							</p>
+							<p class="tr-schedule">
+								<span class="material-symbols-outlined">schedule</span>
+								{{ tournoi.dateDebut | format_datetime('none', 'short', locale='fr') }}
+							</p>
+						</div>
+						<div class="tr-item-line"></div>
+						<div class="tr-region">
+							{% if tournoi.region is not null %}
+							<p>{{tournoi.region}}</p>
+							{% else %}
+							<p>Monde</p>
+							{% endif %}
+						</div>
+						<div class="tr-item-line"></div>
+						<div class="organisateur-info">
+							<img class="logo-organisateur" src="{{ vich_uploader_asset(tournoi, 'logoFile') }}"
+								alt="Logo organisateur">
+							<p>{{ tournoi.nomOrganisation }}</p>
+						</div>
+					</div>
+				</div>
+			</a>
+			{% endfor %}
 		</div>
-		{{ knp_pagination_render(tournois) }}
 	</div>
+	{{ knp_pagination_render(tournois) }}
+</div>
 
 {% endblock %}
 
 {% block javascripts %}
-	{# {{ encore_entry_script_tags('app') }} #}
-	<script src="{{ asset('js/select_jeu.js') }}"></script>
+{# {{ encore_entry_script_tags('app') }} #}
+<script src="{{ asset('js/select_jeu.js') }}"></script>
+
 {% endblock %}
