--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,7 +24,8 @@ TournoisEsport
 </div>
 <div class="filter">
 	<details id="jeux-dropdown">
-		<summary>Sélectionnez un jeu
+		<summary>
+			Sélectionnez un jeu
 			<i class="fa-solid fa-chevron-down"></i>
 		</summary>
 		<ul class="jeux-liste">
@@ -35,7 +36,7 @@ TournoisEsport
 			</li>
 			{% endfor %}
 		</ul>
-	</details> 
+	</details>
 </div>
 <div class="tr-main-wrapper">
 	{# <h3 id="find-tr-h3">Trouver des tournois</h3> #}
