--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,26 @@ details>summary::-moz-list-bullet {
   display: none !important;
 }
 
+details>summary {
+  cursor: pointer;
+  list-style: none;
+  padding: 10px;
+  background-color: #2c3147;
+  color: white;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  border-radius: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+details>summary i {
+  margin-left: 10px;
+}
+
+
 #jeu-dropdown {
   width: 200px;
 }
@@ -180,24 +200,29 @@ details>summary::-moz-list-bullet {
   background-repeat: no-repeat;
   color: white;
   text-align: center;
-  padding: 100px 50px;
   height: 250px;
 }
 
 .banner-theme-txt {
-  width: 25%;
   /* position: absolute; */
-  text-align: left;
-  top: 20px;
+  text-align: start;
+  padding: 20px;
 }
 
 .banner-theme-txt h1 {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
+  width: 25%;
 }
 
 .tr-main-wrapper {
   padding: 20px;
+}
+
+.select-summary {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 
