--- a/templates/include/profil_sidebar.html.twig
+++ b/templates/include/profil_sidebar.html.twig
@@ -2,12 +2,12 @@
 	<img class="logo" src="{{ asset('img/logo.png') }}" alt="Logo victoryforge" />
 	<hr />
 	{% if app.user and app.user.photo %}
-	<a href="{{ path('app_profil', {'id' : utilisateur.id}) }}">
+	<a href="{{ path('app_mon_profil', {'id' : utilisateur.id}) }}">
 		<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">
 	</a>
 	{% elseif app.user %}
-	<a href="{{ path('app_profil') }}">
-		<img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil">
+	<a href="{{ path('app_mon_profil') }}">
+		{# <img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil"> #}
 		<a href="">Personnaliser</a>
 	</a>
 	{% endif %}
@@ -18,88 +18,14 @@
 				<a href="{{ path('app_home') }}">Accueil</a>
 			</li>
 			<li>
-				<a href="{{ path('app_profil') }}">Profil</a>
+				<a href="{{ path('app_mon_profil') }}">Profil</a>
 			</li>
 			<li>
-				<a href="{{ path('app_profil_param') }}">Paramètres du compte</a>
+				<a href="{{ path('app_mon_profil_param') }}">Paramètres du compte</a>
 			</li>
 			<li>
 				<a href="app_logout">Se déconnecter</a>
 			</li>
 		</ul>
 	</div>
-</div <div id="sidebar" class="sticky-sidebar">
-<div class="top-menu">
-	<a class="logo" href="{{ path('app_home') }}"><img src="{{ asset('img/logo.png') }}" alt="Logo victoryforge" /></a>
-	<hr class="logo-underline">
-	<div class="side-menu">
-		<a href="{{ path('app_home') }}">
-			<span class="material-symbols-outlined">home</span>
-			Accueil
-		</a>
-		<a href="{{ path('app_tournoi_new') }}">
-			<span class="material-symbols-outlined">
-				contract_edit
-			</span>
-			Organiser un tournoi
-		</a>
-		<a href="">
-			<span class="material-symbols-outlined">
-				receipt_long
-			</span>
-			Tournois rejoint
-		</a>
-		<a href="{{ path('new_equipe') }}">
-			<span class="material-symbols-outlined">
-				add_circle
-			</span>
-			Crée une équipe
-		</a>
-		<a href="{{ path('app_chat') }}">
-			<span class="material-symbols-outlined">
-				chat_bubble
-			</span>
-			Chat
-		</a>
-		{% if app.user == null %}
-		<a href="{{ path('app_login') }}">
-			<span class="material-symbols-outlined">
-				login
-			</span>
-			Se connecter
-		</a>
-		<a href="{{ path('app_register') }}">
-			<span class="material-symbols-outlined">
-				how_to_reg
-			</span>
-			S'enregistrer
-		</a>
-		{% else %}
-		<a href="{{ path('app_logout') }}">
-			<span class="material-symbols-outlined">
-				logout
-			</span>
-			Se déconnecter
-		</a>
-		{% endif %}
-	</div>
-</div>
-<div class="profil-menu">
-	{% if app.user and app.user.photo %}
-	<a href="{{ path('app_profil', {'id' : utilisateur.id}) }}">
-		<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">
-		<p>{{ app.user.pseudo }}</p>
-	</a>
-	{% elseif app.user %}
-	<a href="{{ path('app_profil') }}">
-		<img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil">
-		<p class="profile-link">{{ app.user.pseudo }}
-			<span class="material-symbols-outlined">
-				chevron_right
-			</span>
-		</p>
-	</a>
-
-	{% endif %}
-</div>
 </div>
