--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,29 +24,27 @@ TournoisEsport
 </div>
 <div class="filter">
 	<details id="jeux-dropdown">
-		
 		<summary>
 			{% if selectedJeu != null %}
-			    <img class="logo-jeu" src="{{ vich_uploader_asset(selectedJeu, 'logoFile') }}" alt="{{ selectedJeu.nomJeu }}">
-				{{ selectedJeu.nomJeu }}
-
-				{% else %}
-				Sélectionnez un jeu
+			<img class="logo-jeu" src="{{ vich_uploader_asset(selectedJeu, 'logoFile') }}"
+				alt="{{ selectedJeu.nomJeu }}">
+			{{ selectedJeu.nomJeu }}
+			{% else %}
+			Sélectionnez un jeu
 			{% endif %}
 			<i class="fa-solid fa-chevron-down"></i>
+			<i class="fa-solid fa-chevron-up" style="display:none;"></i>
 		</summary>
 		<ul class="jeux-liste">
 			{% for jeu in jeux %}
-			
-				{#{% if selectedJeu is not null and jeu.id != selectedJeu.id %}#}
-				
-					<li data-value="{{ jeu.id }}">
-						<img class="logo-jeu" src="{{ vich_uploader_asset(jeu, 'logoFile') }}" alt="{{ jeu.nomJeu }}">
-						<span class="nomJeu">{{ jeu.nomJeu }}</span>
-					</li>
+			<li data-value="{{ jeu.id }}">
+				<img class="not-selected-nom-jeu" style="width: 70px; height: 70px;"
+					src="{{ vich_uploader_asset(jeu, 'logoFile') }}" alt="{{ jeu.nomJeu }}">
+				<p class="nomJeu">{{ jeu.nomJeu }}</p>
+			</li>
 			{% endfor %}
 		</ul>
-</details>
+	</details>
 </div>
 <div class="tr-main-wrapper">
 	{# <h3 id="find-tr-h3">Trouver des tournois</h3> #}
