--- a/templates/tournoi/show.html.twig
+++ b/templates/tournoi/show.html.twig
@@ -87,7 +87,7 @@
 		</div>
 	{% endif %}
 
-	<div>
+	<div class="tr-join-status">
 		<h4>Enregistrement Ouvert</h4>
 		<p>40 / {{ tournoi.nbJoueursMax }} <em>Joueurs enregistré</em></p>
 		<span id="rejoindre-tr">REJOINDRE</span>
