--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -79,8 +79,7 @@ TournoisEsport
 						</div>
 						<div class="tr-item-line"></div>
 						<div class="organisateur-info">
-							<img class="logo-organisateur" src="{{ vich_uploader_asset(tournoi, 'logoFile') }}"
-								alt="Logo organisateur">
+							<img class="logo-organisateur" src="{{ vich_uploader_asset(tournoi, 'logoFile') }}" alt="Logo organisateur">
 							<p>{{ tournoi.nomOrganisation }}</p>
 						</div>
 					</div>
