--- a/templates/include/profil_sidebar.html.twig
+++ b/templates/include/profil_sidebar.html.twig
@@ -24,7 +24,7 @@
 				<a href="{{ path('app_mon_profil_param') }}">Paramètres du compte</a>
 			</li>
 			<li>
-				<a href="app_logout">Se déconnecter</a>
+				<a href="{{ path('app_logout') }}">Se déconnecter</a>
 			</li>
 		</ul>
 	</div>
