--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="Site pour organiser, participer à vos tournois favoris" />
+	<meta name="description" content="Site pour organiser et participer à vos tournois favoris" />
 	<title>
 		{% block title %}Bienvenue !
 		{% endblock %}
 	</title>
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 	{% block stylesheets %}
@@ -36,13 +36,26 @@
 		{% endblock %}
 
 		<div id="content"> {% block body %}{% endblock %}
+			{% for message in app.flashes('success') %}
+				<div class="alert alert-success">
+					{{ message }}
+				</div>
+			{% endfor %}
+			
+			{% for message in app.flashes('error') %}
+				<div class="alert alert-danger">
+					{{ message }}
+				</div>
+			{% endfor %}
 		</div>
 	</div>
-	{% block javascripts %}
-	{# {{ encore_entry_script_tags('app') }} #}
-	<script src="{{ asset('js/script.js') }}"></script>
-	{% endblock %}
+
 </body>
+
+{% block javascripts %}
+{# {{ encore_entry_script_tags('app') }} #}
+<script src="{{ asset('js/script.js') }}"></script>
+{% endblock %}
 
 <script>
 	const openSidebar = document.querySelector('.fa-bars');
@@ -59,7 +72,14 @@
 		overlay.classList.remove('active');
 	});
 
-
+	document.addEventListener('DOMContentLoaded', (event) => {
+		const flashMessages = document.querySelectorAll('.alert');
+	
+		flashMessages.forEach((flashMessage) => {
+			setTimeout(() => {
+				flashMessage.style.display = 'none';
+			}, 2000);
+		});
+	});
 </script>
-
 </html>
